blender segmentation faults when I try to pick a .EXR file for an input movie node #35599

Closed
opened 2013-06-02 01:44:54 +02:00 by Robert Forsman · 6 comments

%%%Gentoo linux
NVIDIA Corporation GT218M [NVS 3100M]

blender 2.67b malfunction. I don't have any other versions installed.

blender crashes when I try to pick this file for an input/movie clip node in the compositor.

open blender without any project.
go to the Node Editor window.
enable Use Nodes checkbox
shift-A add an input/movie clip
Open
select 000001.exr
Open Clip

Sementation Fault

Blender 2.67 (sub 0), Revision: 57123

bpy.context.scene.use_nodes = True # Property
bpy.ops.transform.translate(value=(-190.472, 99.3132, 0), constraint_axis=(False, False, False), constraint_orientation='GLOBAL', mirror=False, proportional='DISABLED', proportional_edit_falloff='SMOOTH', proportional_size=1, snap=False, snap_target='CLOSEST', snap_point=(0, 0, 0), snap_align=False, snap_normal=(0, 0, 0), texture_space=False, release_confirm=False) # Operator

backtrace

blender() [0x8a726cd]
blender() [0x8a72913]
linux-gate.so.1(__kernel_sigreturn+0) [0xffffe400]
blender(nearest_interpolation_color+0x80) [0x91a8e70]
blender(_ZN22MovieClipBaseOperation12executePixelEPfff12PixelSampler+0xa4) [0x8ea8034]
blender(_ZN16PreviewOperation13executeRegionEP4rctij+0xef) [0x8ed8ccf]
blender(_ZN9CPUDevice7executeEP11WorkPackage+0x53) [0x8ed75a3]
blender(_ZN13WorkScheduler18thread_execute_cpuEPv+0x25) [0x8e87d85]
blender() [0x93d5970]
/lib/libpthread.so.0(+0x7def) [0xb7352def]
/lib/libc.so.6(clone+0x5e) [0xb717e9ee]

%%%

%%%Gentoo linux NVIDIA Corporation GT218M [NVS 3100M] blender 2.67b malfunction. I don't have any other versions installed. blender crashes when I try to pick this file for an input/movie clip node in the compositor. open blender without any project. go to the Node Editor window. enable Use Nodes checkbox shift-A add an input/movie clip Open select 000001.exr Open Clip Sementation Fault # Blender 2.67 (sub 0), Revision: 57123 bpy.context.scene.use_nodes = True # Property bpy.ops.transform.translate(value=(-190.472, 99.3132, 0), constraint_axis=(False, False, False), constraint_orientation='GLOBAL', mirror=False, proportional='DISABLED', proportional_edit_falloff='SMOOTH', proportional_size=1, snap=False, snap_target='CLOSEST', snap_point=(0, 0, 0), snap_align=False, snap_normal=(0, 0, 0), texture_space=False, release_confirm=False) # Operator # backtrace blender() [0x8a726cd] blender() [0x8a72913] linux-gate.so.1(__kernel_sigreturn+0) [0xffffe400] blender(nearest_interpolation_color+0x80) [0x91a8e70] blender(_ZN22MovieClipBaseOperation12executePixelEPfff12PixelSampler+0xa4) [0x8ea8034] blender(_ZN16PreviewOperation13executeRegionEP4rctij+0xef) [0x8ed8ccf] blender(_ZN9CPUDevice7executeEP11WorkPackage+0x53) [0x8ed75a3] blender(_ZN13WorkScheduler18thread_execute_cpuEPv+0x25) [0x8e87d85] blender() [0x93d5970] /lib/libpthread.so.0(+0x7def) [0xb7352def] /lib/libc.so.6(clone+0x5e) [0xb717e9ee] %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Crash confirmed.

Sergey: after load, it runs the compositor without loading the openexr itself? Imbuf has both buffers set to null%%%

%%%Crash confirmed. Sergey: after load, it runs the compositor without loading the openexr itself? Imbuf has both buffers set to null%%%
Member

%%%Oh wait, I checked in the image window, this exr file is a multilayer one.%%%

%%%Oh wait, I checked in the image window, this exr file is a multilayer one.%%%

%%%Multilayer exrs are not supported for movie clip input, but for sure shall not crash. Will check on this later.%%%

%%%Multilayer exrs are not supported for movie clip input, but for sure shall not crash. Will check on this later.%%%

%%%Fixed in svn rev57202. Thanks for the report, closing.%%%

%%%Fixed in svn rev57202. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35599
No description provided.