Fix #35599: MovieClip node crashes when using multilayer exr

Multilayer EXR is not supported as a source for movie clip yet,
but there's no excuse to crash!